# retaia-agent

./: .gitignore  .gitmodules  AGENT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
.husky/: pre-commit  pre-push
assets/icon/: retaia-logo.icns
crates/retaia-core-client/: Cargo.toml  README.md
crates/retaia-core-client/.openapi-generator/: FILES
crates/retaia-core-client/docs/: AgentsApi.md  AppFeaturesResponse.md  AppFeaturesUpdateRequest.md  AssetTranscript.md  Auth2faSetupResponse.md  AuthClientTokenRequest.md  AuthDevicePollPending.md  BatchesApi.md  DecisionsPreviewPostRequest.md  Job.md  SubmitDerived.md  SubmitDerivedResult.md
crates/retaia-core-client/src/apis/: agents_api.rs  assets_api.rs  auth_api.rs  batches_api.rs  configuration.rs  decisions_api.rs  derived_api.rs  jobs_api.rs  mod.rs  ops_api.rs  purge_api.rs
crates/retaia-core-client/src/models/: _agents_register_post_200_response.rs  _agents_register_post_request.rs  _assets__uuid__decision_post_request.rs  _assets__uuid__derived_upload_complete_post_request.rs  _assets__uuid__derived_upload_complete_post_request_parts_inner.rs  _assets__uuid__derived_upload_init_post_request.rs  _assets__uuid__derived_upload_part_post_200_response.rs  _assets__uuid__derived_upload_part_post_request.rs  _assets__uuid__patch_request.rs  _assets__uuid__purge_post_request.rs  _assets_get_200_response.rs  _assets_purge_post_200_response.rs  _assets_purge_post_200_response_results_inner.rs  _assets_purge_post_request.rs  _auth_me_sessions_get_200_response.rs  _auth_me_sessions_revoke_others_post_200_response.rs  _batches_moves_post_request.rs  _batches_moves_preview_post_request.rs  _decisions_apply_post_request.rs  _decisions_preview_post_request.rs  _jobs__job_id__fail_post_request.rs  _jobs__job_id__heartbeat_post_200_response.rs  _jobs__job_id__heartbeat_post_request.rs  _ops_agents_get_200_response.rs  _ops_agents_get_200_response_items_inner.rs  _ops_agents_get_200_response_items_inner_current_job.rs  _ops_agents_get_200_response_items_inner_debug.rs  _ops_agents_get_200_response_items_inner_last_failed_job.rs  _ops_agents_get_200_response_items_inner_last_successful_job.rs  _ops_ingest_diagnostics_get_200_response.rs  _ops_ingest_diagnostics_get_200_response_latest_unmatched_inner.rs  _ops_ingest_requeue_post_202_response.rs  _ops_ingest_requeue_post_202_response_target.rs  _ops_ingest_requeue_post_request.rs  _ops_ingest_unmatched_get_200_response.rs  _ops_ingest_unmatched_get_200_response_items_inner.rs  _ops_jobs_queue_get_200_response.rs  _ops_jobs_queue_get_200_response_by_type_inner.rs  _ops_jobs_queue_get_200_response_summary.rs  _ops_locks_get_200_response.rs  (+84 more)
docs/: API-CLIENT.md  AUDIT-REMEDIATION-PLAN-2026-03-20.md  AUDIT-SPECS-CODE-TESTS-2026-03-20.md  CI-QUALITY-GATES.md  CONFIG-STORAGE.md  CONFIGURATION-PANEL.md  DAEMON-MODE.md  FACTS-FIELDS-PROPOSAL-FOR-API-TEAM.md  FIXTURE-CONTRACT.md  NOTIFICATIONS.md  PRE-V1-STATUS.md  README.md  REAL-FIXTURES-TODO.md  RUNTIME-AUDIT-2026-03-20.md  RUNTIME-CONSTRAINTS.md  SPECS-BUMP-AUDIT-2026-03-22.md  SPECS-BUMP-AUDIT-2026-03-25.md  UX-SYSTEM-TRAY.md  V1-FREEZE-REPORT.md  V1-SPECS-CONFORMITY.md
docs/api/: AgentsApi.md  AgentsRegisterPost200Response.md  AgentsRegisterPostRequest.md  AppFeaturesResponse.md  AppFeaturesUpdateRequest.md  AppPolicyResponse.md  AppPolicyUpdateRequest.md  AssetAudit.md  AssetAuditRevisionHistoryInner.md  AssetDecisions.md  AssetDecisionsHistoryInner.md  AssetDerived.md  AssetDetail.md  AssetFieldValue.md  AssetPaths.md  AssetProcessing.md  AssetProjectRef.md  AssetState.md  AssetSummary.md  AssetTranscript.md  AssetsApi.md  AssetsGet200Response.md  AssetsPurgePost200Response.md  AssetsPurgePost200ResponseResultsInner.md  AssetsPurgePostRequest.md  AssetsUuidDecisionPostRequest.md  AssetsUuidDerivedUploadCompletePostRequest.md  AssetsUuidDerivedUploadCompletePostRequestPartsInner.md  AssetsUuidDerivedUploadInitPostRequest.md  AssetsUuidDerivedUploadPartPost200Response.md  AssetsUuidDerivedUploadPartPostRequest.md  AssetsUuidPatchRequest.md  AssetsUuidPurgePostRequest.md  Auth2faEnableResponse.md  Auth2faOtpRequest.md  Auth2faRecoveryCodesResponse.md  AuthApi.md  AuthClientTokenSuccess.md  AuthCurrentUser.md  AuthDeviceCancelRequest.md  (+82 more)
locales/: en.json  fr.json
scripts/: check_duplicate_deps.py  duplicate_deps_allowlist.txt  generate_core_api_client.sh  validate_external_fixtures.sh  validate_locales.py
scripts/ci/: check-branch-up-to-date.mjs  check-coverage-summary.mjs  run-npm-script.mjs
scripts/release/: package-linux-deb.sh  package-linux-rpm.sh  package-macos-pkg.sh  package-windows-msi.ps1
src/: lib.rs
src/application/: agent_registration.rs  agent_runtime_app.rs  config_repository.rs  core_api_gateway.rs  daemon_manager.rs  derived_job_executor.rs  derived_processing_gateway.rs  mod.rs  notification_bridge.rs  proxy_generator.rs  runtime_cli_shell.rs  (+9 more)
tests/: bdd_capabilities_authz.rs  bdd_configuration_and_infra.rs  bdd_runtime_behavior.rs  bdd_specs.rs  e2e_authz_capabilities.rs  e2e_configuration.rs  e2e_flow.rs  e2e_openapi_http_flow.rs  e2e_runtime_behavior.rs  tdd_capabilities.rs  tdd_configuration.rs  tdd_runtime.rs  tdd_runtime_core.rs
(+151 files in other folders)
