[package]
name = "retaia-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "retaia_agent"
path = "src/lib.rs"

[dependencies]
backon = "1.6.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
notify-rust = "4.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.2", default-features = false, optional = true }
tauri-plugin-notification = { version = "2.3.3", optional = true }
thiserror = "2.0"
toml = "0.8"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
tempfile = "3.10"

[features]
default = []
tauri-notifications = ["dep:tauri", "dep:tauri-plugin-notification"]
