[package]
name = "retaia-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "retaia_agent"
path = "src/lib.rs"

[dependencies]
backon = "1.6.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
eframe = { version = "0.33", default-features = true, optional = true }
genai = "0.4.0-alpha.7"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
notify-rust = "4.12"
rawloader = "0.37.1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
retaia_core_client = { path = "crates/retaia-core-client", optional = true }
rfd = { version = "0.15", optional = true }
rusqlite = { version = "0.37", features = ["bundled"] }
tray-icon = { version = "0.19", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
service-manager = "0.10"
tauri = { version = "2.10.2", default-features = false, optional = true }
tauri-plugin-notification = { version = "2.3.3", optional = true }
thiserror = "2.0"
tokio = { version = "1.49", features = ["rt"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
tempfile = "3.10"

[features]
default = []
core-api-client = ["dep:retaia_core_client"]
tauri-notifications = ["dep:tauri", "dep:tauri-plugin-notification"]
desktop-shell = ["dep:eframe", "dep:rfd", "dep:tray-icon"]
