[package]
name = "retaia-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "retaia_agent"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
backon = "1.6.0"
clap = { version = "4.6", features = ["derive"] }
ctrlc = "3.5"
directories = "6.0"
eframe = { version = "0.34", default-features = true, optional = true }
exif = { package = "kamadak-exif", version = "0.6.1" }
genai = "0.5.3"
hex = "0.4"
hound = "3.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
notify-rust = "4.16"
rawloader = "0.37.1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "native-tls"] }
retaia_core_client = { path = "crates/retaia-core-client", optional = true }
rfd = { version = "0.17", optional = true }
rusqlite = { version = "0.39", features = ["bundled"] }
tray-icon = { version = "0.23", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sequoia-openpgp = { version = "2.2", default-features = false, features = ["compression", "crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
service-manager = "0.11"
sha2 = "0.11"
tauri = { version = "2.10.3", default-features = false, optional = true }
tauri-plugin-notification = { version = "2.3.3", optional = true }
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.50", features = ["rt"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
fs2 = "0.4"
uuid = { version = "1.23", features = ["v4"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }

[features]
default = []
core-api-client = ["dep:retaia_core_client"]
tauri-notifications = ["dep:tauri", "dep:tauri-plugin-notification"]
desktop-shell = ["dep:eframe", "dep:rfd", "dep:tray-icon"]
